2_ano/LFA/Pratica/Bloco_2/2.4/PrefixCalculator.g4
grammar PrefixCalculator;

program: stat * EOF;

stat: expr? NEWLINE; 

expr: 
	 op = ('*'|'/'|'+'|'-') expr expr 	#ExpPrefix
	| Number				#ExprNumber
	;

Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
